# OpenChordix

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build-linux.sh  build-windows-msvc.bat  build.bat  linux-build-setup.sh  raw-job-log.txt  release-please-config.json  vcpkg.json  windows-build-setup.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  build_problem.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/act/: pr.json
.github/workflows/: ci.yml  cmake-multi-platform.yml  conventional-commits.yml  release-please.yml
cmake/: GenerateEmbeddedAssets.cmake
src/: AudioManager.cpp  AudioManager.h  NoteConverter.h  PitchDetector.h  main.cpp
src/app/: AppController.cpp  AppController.h  CMakeLists.txt  DesktopIntegration.cpp  DesktopIntegration.h  EmbeddedAssets.h  GraphicsFlow.cpp  GraphicsFlow.h  appicon.rc.in  main.cpp  openchordix.desktop.in
src/app/console/: ConsoleFlow.cpp  ConsoleFlow.h  ConsolePrompter.cpp  ConsolePrompter.h
src/app/platform/: ImGuiPlatformBridge.cpp  ImGuiPlatformBridge.h
src/app/scenes/: AudioSetupScene.cpp  AudioSetupScene.h  IntroScene.cpp  IntroScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.h  SceneCatalog.cpp  SceneCatalog.h  SettingsScene.cpp  SettingsScene.h  TestScene.cpp  TestScene.h  TestSceneModelController.cpp  TestSceneModelController.h  TrackSelectScene.cpp  TrackSelectScene.h  TunerScene.cpp  TunerScene.h
src/app/settings/: DisplaySettingsController.cpp  DisplaySettingsController.h  GraphicsConfig.cpp  GraphicsConfig.h
src/app/ui/: DeviceSelector.cpp  DeviceSelector.h  FileDialog.cpp  FileDialog.h  IconGlyphs.cpp  IconGlyphs.h  ModalDialog.cpp  ModalDialog.h  UILayout.cpp  UILayout.h
src/core/: AppPaths.cpp  AppPaths.h  AudioManager.cpp  AudioManager.h  AudioSession.cpp  AudioSession.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigStore.cpp  ConfigStore.h  NoteConverter.cpp  PitchDetector.cpp  PitchDetector.h
src/core/audio/: AudioConfig.h  AudioManager.cpp  AudioManager.h  AudioSession.cpp  AudioSession.h
src/core/score/: ScoreService.h  ScoreServiceMemory.cpp  ScoreServiceMemory.h  ScoreTypes.h
src/core/track/: TrackAudioDuration.cpp  TrackAudioDuration.h  TrackCatalog.h  TrackCatalogFile.cpp  TrackCatalogFile.h  TrackCatalogMemory.cpp  TrackCatalogMemory.h  TrackTypes.h
src/devtools/: CMakeLists.txt  CommandRegistry.cpp  CommandRegistry.h  DevConsole.cpp  DevConsole.h  IDevCommand.h
src/devtools/commands/: ClearCommand.cpp  CommandList.cpp  CommandList.h  HelpCommand.cpp  ModelCommands.cpp  QuitCommand.cpp  SceneCommands.cpp
src/graphics/: AnimatedUI.cpp  AnimatedUI.h  CMakeLists.txt  DisplayManager.cpp  DisplayManager.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsFlow.cpp  GraphicsFlow.h  Renderer.cpp  Renderer.h
src/graphics/assets/: GltfAsset.h  GltfLoader.cpp
src/graphics/gltf/: GltfAsset.h  GltfLoader.cpp
src/graphics/render/: BgfxHandle.h  Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h  ModelRenderer.cpp  ModelRenderer.h  RenderViewIds.h  ShaderLoader.cpp  ShaderLoader.h
src/graphics/shaders/standard/: fs_standard.sc  varying.def.sc  vs_standard.sc
src/gui/: CMakeLists.txt  gui.cpp  gui.h
tests/: CMakeLists.txt  test_config_store.cpp  test_graphics_config.cpp  test_leaks.cpp  test_note_converter.cpp  test_pitch_detector.cpp
